unvalid_tests/syntax_errors/test2.go
// Test 2: Missing closing brace
func main() {
    x := 10
    y := 20
